--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,19 +9,26 @@ body {
     background-color: #fff;
     border-radius: 62px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    padding: 40px;
+    padding: 3%;
     margin: auto;
     box-sizing: border-box;
     text-align: center; /* Centrar contenido */
+}
+
+@media (max-width: 480px) {
+    .container {
+        margin: 5%;
+    }
 }
 h2 {
     text-align: center;
     color: #ff6700;
 }
-p {
+.parrafo {
     text-align: left;
     font-size: 16px;
-    margin-bottom: 30px;
+    margin-bottom: 7%;
+    color: #4F4F4F;
 }
 
 .form-control {
@@ -34,7 +41,17 @@ p {
     box-sizing: border-box;
     font-size: 16px;
 }
+
+.form-control::placeholder {
+    color: #4f4f4f;
+    opacity: 0.5;
+}
+
 .form-check {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
     margin-bottom: 20px;
     font-size: 16px;
 }
@@ -42,10 +59,10 @@ p {
     display: none;
 }
 .form-check label {
-    display: block;
     position: relative;
     padding-left: 30px;
     cursor: pointer;
+    display: inline-block; 
 }
 .form-check label:before {
     content: '';
@@ -82,6 +99,7 @@ p {
     font-size: 16px;
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     box-sizing: border-box;
+    font-weight: bold;
 }
 .button:hover,
 .button:focus { /* Aplicar estilos cuando está enfocado */
@@ -98,4 +116,81 @@ p {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+}
+
+.img-logo {
+    width: 65%;
+    height: auto; 
+    max-width: 100%;
+    padding-bottom: 5%;
+}
+
+.img-icon{
+    width: 7%;
+    height: auto;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+    visibility: hidden;
+  }
+  
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    border-radius: 30px;
+    max-height: 60vh;
+    max-width: 50vh;
+    overflow-y: auto;
+  }
+  
+  .popup-content {
+    text-align: center;
+  }
+  
+  #open-popup {
+    cursor: pointer;
+  }
+  
+  .parrafo-tc{
+    text-align: left;
+    font-size: 16px;
+    color: #4F4F4F;
+  }
+  .subtitulo{
+    font-size: 16px;
+    text-align: left;
+    color: #4F4F4F;
+    font-weight: bold;
+  }
+
+  .navbar-custom {
+    background-color: #004E98;
+    color: #fff;
+}
+
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
+    color: #fff; 
+}
+
+.navbar-custom .navbar-toggler {
+    border-color: #fff;
+}
+
+.navbar-custom .nav-link:hover {
+    color: #f39c12; 
+}
+
+/* Cambiar el color del ícono del navbar */
+.navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3E%3Cpath d='M1 4h14v1H1V4zm0 4h14v1H1V8zm0 4h14v1H1v-1z'/%3E%3C/svg%3E");
 }
